--- a/src/Components/NavBar/Nav.css
+++ b/src/Components/NavBar/Nav.css
@@ -56,6 +56,7 @@
 	.menu {
 		display: block;
 		z-index: 100;
+		cursor: pointer;
 	}
 
 	.small {
